2006-08-13  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR Classpath/23952
	* java/util/ResourceBundle.java (CACHE_SIZE): New constant.
	(bundleCache): Replaced with an LRU of CACHE_SIZE elements.
	(lastDefaultLocale): Removed.
	(emptyLocale): Likewise.
	(BundleKey.defaultLocale): New field.
	(BundleKey.BundleKey): Add a Locale (as a 1st positional) argument.
	(BundleKey.set): Likewise.
	(BundleKey.equals): Take defaultLocal field into consideration.
	(getBundle(String, Locale, ClassLoader)): Use updated BundleKey and LRU.

2006-08-13  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JMenu.java
	(MenuChangeListener): New inner class, helps firing menu events.
	(changeListener): New field.
	(add(text)): Create new JMenuItem here and call add(JMenuItem).
	(add(Action)): Create Action using createActionComponent()
	and add via add(Component).
	(setModel): Install and uninstall MenuChangeListener here.

2006-08-13  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR Classpath/27372
	* java/math/BigInteger.java: Updated copyright year.
	(init): Consume as little bytes as possible.
	(BigInteger(int, int, Random)): Ensure bitLength bits are used.
	(valueOf(String, int)): Throw NumberFormatException for malformed strings
	as per RI's documentation.

2006-08-13  Sven de Marothy  <sven@physto.se>

	* java/util/Locale.java
	(hashcode): Is a serialized field, not transient.
	(equals): Should NOT compare strings by reference.
	(readObject/writeObject): Use the default methods and handle the hash
	seperately.

2006-08-13  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR Classpath/28678
	* gnu/java/security/Engine.java (getInstance(String, String, Provider)):
	Updated documentation.
	Formatting.
	(getInstance(String, String, Provider, Object[])): Likewise.
	Separate checks for null and empty string arguments.
	Include as much information as possible in the exception's message.
	Do not swallow original exception; instead use it as the cause of the
	resulting exception.